Animation/Drivers on Bone Collections created in 4.0 break in 4.1 #120447

Closed
opened 2024-04-10 00:51:54 +02:00 by Frozen_Death_Knight · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: 4.0

Short description of error

I have an old rig in 4.0 that I opened in 4.1 when it got released. I noticed that the old 4.0 drivers that controlled the visibility of bone layers became broken in the new system. There are multiple issues with it:

  1. The drivers work when opening the file in 4.1, but the purple driver highlights are no longer there.
4.0 4.1
Skärmbild 2024-04-10 003602.png Skärmbild 2024-04-10 003716.png
  1. You also can't edit the old drivers using Edit Driver, because it no longer exists.
4.0 4.1
Skärmbild 2024-04-10 005010.png Skärmbild 2024-04-10 003949.png
  1. Finally, the new hierarchy system by having a Bone Layer parenting system. It completely breaks the old drivers when dragging them into the hierarchy.

Broken 4.0 Visibility Drivers 4.1 Bone Collections.gif

  1. The old driver still exists when you unparent the old layer from the new 4.1 one.

Exact steps for others to reproduce the error

  1. Create a Bone Layer with a driver that determines visibility in 4.0.
  2. Open the file and check the lack of purple colour and the inability to use Edit Driver.
  3. Add a new Bone Layer and parent the old layer to the new one.
  4. Use the switch for toggling on and off the 4.0 Bone Layer. The driver is now broken.
  5. Unparent the old Bone Layer. The driver should work again now.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: 4.0 **Short description of error** I have an old rig in 4.0 that I opened in 4.1 when it got released. I noticed that the old 4.0 drivers that controlled the visibility of bone layers became broken in the new system. There are multiple issues with it: 1) The drivers work when opening the file in 4.1, but the purple driver highlights are no longer there. | 4.0 | 4.1 | |-|-| | ![Skärmbild 2024-04-10 003602.png](/attachments/15e17e12-1d89-49ab-a844-4946908c5ff1) | ![Skärmbild 2024-04-10 003716.png](/attachments/831b4f16-7230-46ba-807f-41f6710ed95a) | 2) You also can't edit the old drivers using Edit Driver, because it no longer exists. | 4.0 | 4.1 | |-|-| | ![Skärmbild 2024-04-10 005010.png](/attachments/6546c2b6-1c46-4a65-a5e8-09d2086cd4d3) | ![Skärmbild 2024-04-10 003949.png](/attachments/11e16c35-d9e4-4e1d-a066-f674938869b8) | 3) Finally, the new hierarchy system by having a Bone Layer parenting system. It completely breaks the old drivers when dragging them into the hierarchy. ![Broken 4.0 Visibility Drivers 4.1 Bone Collections.gif](/attachments/e0f0e0e5-5917-4c96-950e-b326546db3ed) 4) The old driver still exists when you unparent the old layer from the new 4.1 one. **Exact steps for others to reproduce the error** 1) Create a Bone Layer with a driver that determines visibility in 4.0. 2) Open the file and check the lack of purple colour and the inability to use Edit Driver. 3) Add a new Bone Layer and parent the old layer to the new one. 4) Use the switch for toggling on and off the 4.0 Bone Layer. The driver is now broken. 5) Unparent the old Bone Layer. The driver should work again now.
Frozen_Death_Knight added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-10 00:51:55 +02:00
Member

but the purple driver highlights are no longer there.

Hi, this has been fixed recently, see: !120298 / 129d5a1067

> but the purple driver highlights are no longer there. Hi, this has been fixed recently, see: !120298 / 129d5a106702b1d7328610b574da56c6e4e6f117
Member

You also can't edit the old drivers using Edit Driver, because it no longer exists.

Can confirm this. Require some versioning code to fix this.
cc @dr.sybren

> You also can't edit the old drivers using Edit Driver, because it no longer exists. Can confirm this. Require some versioning code to fix this. cc @dr.sybren
Pratik Borhade added
Module
Animation & Rigging
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-10 05:14:45 +02:00
Sybren A. Stüvel self-assigned this 2024-04-11 11:08:57 +02:00
Sybren A. Stüvel added this to the 4.1 milestone 2024-04-11 11:19:51 +02:00
Sybren A. Stüvel added
Priority
High
Type
Bug
and removed
Priority
Normal
Type
Report
labels 2024-04-11 11:20:08 +02:00

You also can't edit the old drivers using Edit Driver, because it no longer exists.

I can't confirm this, as for me the drivers keep working and are also visible in the driver editor. Of course, since the property is now different (it uses .collections_all["name"] instead of .collections["name"]) you can't right-click and choose "Edit Driver", but the driver is still there and working, and still visible when you switch the editor to Drivers (Shift+F6):

Screenshot of Blender's driver editor

Please confirm that this is indeed the case for you too, @Frozen_Death_Knight

In the mean time, I'll look into driver versioning code.

> You also can't edit the old drivers using Edit Driver, because it no longer exists. I can't confirm this, as for me the drivers keep working and are also visible in the driver editor. Of course, since the property is now different (it uses `.collections_all["name"]` instead of `.collections["name"]`) you can't right-click and choose "Edit Driver", but the driver is still there and working, and still visible when you switch the editor to Drivers (Shift+F6): ![Screenshot of Blender's driver editor](/attachments/94b02cc0-061f-4d4e-962e-af75495c3edd) Please confirm that this is indeed the case for you too, @Frozen_Death_Knight In the mean time, I'll look into driver versioning code.
186 KiB
Member

@dr.sybren hi, this happens when you open file from 4.0 in 4.1 (possibly drivers are not converted for the bone collection of new hierarchical structure)

  • Just open attached file in 4.0 (see driver is visible and can be edited from context menu)
  • Open same file in 4.1, context menu won't show "edit driver" option
@dr.sybren hi, this happens when you open file from 4.0 in 4.1 (possibly drivers are not converted for the bone collection of new hierarchical structure) - Just open attached file in 4.0 (see driver is visible and can be edited from context menu) - Open same file in 4.1, context menu won't show "edit driver" option
Member

Didn't see your edited message before posting 🙂

you can't right-click and choose "Edit Driver", but the driver is still there and working, and still visible when you switch the editor to Drivers (Shift+F6):

Yes, that's the case AFAICS

Didn't see your edited message before posting 🙂 > you can't right-click and choose "Edit Driver", but the driver is still there and working, and still visible when you switch the editor to Drivers (Shift+F6): Yes, that's the case AFAICS
Sybren A. Stüvel changed title from New Bone Collections system in 4.1 breaks visibility drivers from the old system (especially when put into an hierarchy) to Drivers on Bone Collections created in 4.0 break in 4.1 2024-04-11 12:01:32 +02:00
Sybren A. Stüvel changed title from Drivers on Bone Collections created in 4.0 break in 4.1 to Animation/Drivers on Bone Collections created in 4.0 break in 4.1 2024-04-11 12:11:16 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-11 15:27:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120447
No description provided.